# nRF5-cmake-scripts-example-base

./: .gitignore  CMakeLists.txt
CMake/board/: nrf52840-mdk.cmake
config/: app_config.h  sdk_config.h
src/: CMakeLists.txt
